--- a/styles/style.css
+++ b/styles/style.css
@@ -27,9 +27,6 @@ body {
     color: rgb(246, 248, 248);
 }
 
-.player-interface {
-}
-
 .gameboard-container {
     display: grid;
     grid-template-columns: repeat(3, 167px);
@@ -42,6 +39,18 @@ body {
 .gameboard-block {
     height: 167px;
     border: 2px solid #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.gameboard-block:hover {
+    background-color: #c8e3eb;
+    cursor: pointer;
+}
+
+.player-move {
+    font-size: 90px;
 }
 
 .restart-button {
