--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ body {
     font-weight: bold;
     background-color: rgb(143, 178, 192);
     height: 17%;
-    font-size: 70px;
+    font-size: 5em;
     color: rgb(246, 248, 248);
 }
 
@@ -33,8 +33,8 @@ body {
     margin: 2em auto 1.5em auto;
     height: 510px;
     width: 501px;
-    border: 1px solid #000000;
     background-color: rgb(240, 240, 233);
+    border: 2px solid #000000;
 }
 
 .gameboard-block {
